# cshell

./: CMakeLists.txt  README.md  out  temp.txt  test.c
include/: args.h  core.h  definitions.h  internal_cmds.h  settings.h
src/: args.c  core.c  core.h  internal_cmds.c  main.c
